<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/credits"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/about"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/about"
        android:textColor="@color/textColor"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/app_info"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/app_info"
        android:textColor="@color/textColor"
        android:layout_marginBottom="@dimen/text_dist"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/author"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/author"
        android:textColor="@color/textColor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/author_name"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/author_name"
        android:textColor="@color/textColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/website"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/website"
        android:linksClickable="true"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/linkColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/author_bio"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/author_bio"
        android:textColor="@color/textColor"
        android:layout_marginBottom="20dp"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/credit"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/credit"
        android:textColor="@color/textColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/prof"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/prof"
        android:textColor="@color/textColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/gf"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/credit_gf"
        android:textColor="@color/textColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/source1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/free_source_1"
        android:linksClickable="true"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/linkColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/source2"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/free_source_2"
        android:linksClickable="true"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/linkColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/source3"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/free_source_3"
        android:linksClickable="true"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/linkColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/source4"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/free_source_4"
        android:linksClickable="true"
        android:autoLink="web"
        android:clickable="true"
        android:textColor="@color/linkColor"
        android:layout_marginBottom="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        />
</LinearLayout>