<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:background="@color/colorPrimary"
    tools:context="com.chimnguyen.multitouchcompetition.Settings">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageViewS"
        android:scaleType="fitXY"
        android:layout_centerInParent="false"
        />

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:text="@string/mode"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp" />

    <TextView
        android:id="@+id/sub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="@color/textColor"
        android:text="@string/not_available_general"
        android:layout_marginTop="35dp"
        android:layout_alignTop="@+id/text_mode"
        android:layout_alignStart="@+id/text_mode" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_alignBottom="@+id/text_mode"
        android:layout_alignParentEnd="true"
        android:id="@+id/checkBox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_round"
        android:text="@string/amount_round"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/sub_text"
        android:layout_alignStart="@+id/sub_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:id="@+id/number_round"
        android:layout_alignBaseline="@+id/text_round"
        android:layout_alignBottom="@+id/text_round"
        android:layout_alignEnd="@+id/checkBox" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_round"
        android:max="7"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/custom_thumb"
        android:layout_alignTop="@+id/number_round"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/circle_size"
        android:text="@string/circle_size"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/seekbar_round"
        android:layout_alignStart="@+id/sub_text" />
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/textColor"
        android:id="@+id/circle_input"
        android:text="@string/circle_size_input"
        android:layout_alignBaseline="@+id/circle_size"
        android:layout_alignBottom="@+id/circle_size"
        android:layout_alignEnd="@+id/checkBox" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_circle"
        android:max="50"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/custom_thumb"
        android:layout_alignTop="@+id/circle_size"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp" />
    <Button
        android:id="@+id/calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calibrate"
        android:textColor="@color/textColor"
        android:background="@drawable/button_normal"
        android:layout_below="@+id/seekbar_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/calibration_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_light"
        android:background="@drawable/button_normal"
        android:textColor="@color/textColor"
        android:visibility="gone"
        android:layout_below="@+id/seekbar_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
    />

    <Button
        android:id="@+id/calibration_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_hard"
        android:textColor="@color/textColor"
        android:background="@drawable/button_normal"
        android:visibility="gone"
        android:layout_below="@+id/seekbar_round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textColor="@color/textColor"
        android:background="@drawable/button_normal"
        android:layout_alignTop="@+id/seekbar_circle"
        android:text="@string/save_settings"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
