<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/launcher"
    tools:context="com.chimnguyen.multitouchcompetition.Launcher">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:scaleType="fitXY"
        android:layout_centerInParent="false"
        />

    <ImageButton
        android:id="@+id/music"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/music"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/no_music"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="top|end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/no_music"
        android:visibility="gone" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="130dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_normal"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:id="@+id/start_game"
        android:textColor="@color/textColor"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/single_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_normal"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/textColor"
        android:text="@string/single_play" />

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_normal"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:textColor="@color/textColor"
        android:text="@string/settings" />

    <ImageButton
        android:id="@+id/exclamation"
        android:layout_width="@dimen/slide_title"
        android:layout_height="@dimen/slide_title"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/exclamation_button" />

    <ImageButton
        android:id="@+id/question"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/question_button"/>
</FrameLayout>
